@@ -4,6 +4,7 @@ import at.tuwien.api.database.table.TableCreateDto;
 import at.tuwien.api.database.table.TableCreateRawQuery;
 import at.tuwien.api.database.table.columns.ColumnDto;
 import at.tuwien.api.database.table.columns.concepts.ColumnSemanticsUpdateDto;
+import at.tuwien.entities.container.image.ContainerImageDate;
 import at.tuwien.entities.database.Database;
 import at.tuwien.entities.database.table.Table;
 import at.tuwien.entities.database.table.columns.TableColumn;
@@ -27,7 +28,6 @@ import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Log4j2
 @Service
@@ -112,8 +112,17 @@ public class TableServiceImpl extends HibernateConnector implements TableService
     public Table createTable(Long databaseId, TableCreateDto createDto, Principal principal)
             throws ImageNotSupportedException, DatabaseNotFoundException, TableMalformedException,
             TableNameExistsException, UserNotFoundException, QueryMalformedException {
+        /* checks */
+        if (createDto.getName().isBlank()) {
+            log.error("Failed create table: table name is blank");
+            throw new TableMalformedException("Failed create table: table name is blank");
+        }
         /* find */
         final Database database = databaseService.find(databaseId);
+        if (!database.getContainer().getImage().getName().equals("mariadb")) {
+            log.error("Currently only MariaDB is supported");
+            throw new ImageNotSupportedException("Currently only MariaDB is supported");
+        }
         final Optional<Table> optional = tableRepository.findByDatabaseAndInternalName(database,
                 tableMapper.nameToInternalName(createDto.getName()));
         if (optional.isPresent()) {
@@ -125,7 +134,7 @@ public class TableServiceImpl extends HibernateConnector implements TableService
         final TableCreateRawQuery query;
         try {
             final Connection connection = dataSource.getConnection();
-            query = tableMapper.tableToCreateTableRawQuery(connection, database, createDto);
+            query = tableMapper.tableToCreateTableRawQuery(connection, createDto);
             if (query.getGenerated()) {
                 /* in case the id column needs to be generated, we need to generate the sequence too */
                 final PreparedStatement preparedStatement10 = tableMapper.tableToCreateSequenceRawQuery(connection, database, createDto);
@@ -134,7 +143,7 @@ public class TableServiceImpl extends HibernateConnector implements TableService
             }
             final PreparedStatement preparedStatement11 = query.getPreparedStatement();
             preparedStatement11.executeUpdate();
-        } catch (SQLException e) {
+        } catch (Exception e) {
             try {
                 final Connection connection = dataSource.getConnection();
                 final PreparedStatement preparedStatement11 = tableMapper.tableToDropSequenceRawQuery(connection, database, createDto);
@@ -150,24 +159,23 @@ public class TableServiceImpl extends HibernateConnector implements TableService
         }
         int[] idx = {0};
         /* map table */
-        final Table tmp = tableMapper.tableCreateDtoToTable(createDto);
-        tmp.setInternalName(tableMapper.nameToInternalName(tmp.getName()));
-        tmp.setQueueName(database.getExchangeName() + "." + tmp.getInternalName());
-        tmp.setRoutingKey(tmp.getQueueName());
-        tmp.setTdbid(databaseId);
-        tmp.setDatabase(database);
-        tmp.setColumns(List.of());
-        tmp.setConstraints(null);
+        final Table entity = tableMapper.tableCreateDtoToTable(createDto);
+        entity.setInternalName(tableMapper.nameToInternalName(entity.getName()));
+        entity.setQueueName(database.getExchangeName() + "." + entity.getInternalName());
+        entity.setRoutingKey(entity.getQueueName());
+        entity.setIsVersioned(true);
+        entity.setTdbid(databaseId);
+        entity.setDatabase(database);
+        entity.setConstraints(null);
         final User creator = userService.findByUsername(principal.getName());
-        tmp.setCreator(creator);
-        tmp.setOwner(creator);
-        /* save in metadata database */
-        final Table entity = tableRepository.save(tmp);
+        entity.setCreator(creator);
+        entity.setOwner(creator);
+        /* map columns */
         entity.setColumns(createDto.getColumns()
                 .stream()
-                .map(tableMapper::columnCreateDtoToTableColumn)
+                .map(column -> tableMapper.columnCreateDtoToTableColumn(column, database.getContainer().getImage()))
                 .map(column -> tableMapper.tableColumnToTableColumn(entity, column, query))
-                .collect(Collectors.toList()));
+                .toList());
         /* set the ordinal position for the columns */
         entity.getColumns()
                 .forEach(column -> {
